# app/Filament/Resources/SlaPolicyResource/Pages/ListSlaPolicies.php
@@ -1,0 +1,11 @@
+<?php
+
+namespace App\Filament\Resources\SlaPolicyResource\Pages;
+
+use App\Filament\Resources\SlaPolicyResource;
+use Filament\Resources\Pages\ListRecords;
+
+class ListSlaPolicies extends ListRecords
+{
+    protected static string $resource = SlaPolicyResource::class;
+}
